crates/ark/src/lsp/snapshots/ark__lsp__indexer__tests__index_r6class.snap
---
source: crates/ark/src/lsp/indexer.rs
expression: entries
---
[
    IndexEntry {
        key: "initialize",
        range: IndexRange {
            start: IndexPoint {
                row: 3,
                column: 8,
            },
            end: IndexPoint {
                row: 3,
                column: 18,
            },
        },
        data: Method {
            name: "initialize",
        },
    },
    IndexEntry {
        key: "public_method",
        range: IndexRange {
            start: IndexPoint {
                row: 6,
                column: 8,
            },
            end: IndexPoint {
                row: 6,
                column: 21,
            },
        },
        data: Method {
            name: "public_method",
        },
    },
    IndexEntry {
        key: "private_method",
        range: IndexRange {
            start: IndexPoint {
                row: 12,
                column: 8,
            },
            end: IndexPoint {
                row: 12,
                column: 22,
            },
        },
        data: Method {
            name: "private_method",
        },
    },
    IndexEntry {
        key: "class",
        range: IndexRange {
            start: IndexPoint {
                row: 1,
                column: 0,
            },
            end: IndexPoint {
                row: 1,
                column: 5,
            },
        },
        data: Variable {
            name: "class",
        },
    },
]
