crates/ark/src/lsp/snapshots/ark__lsp__indexer__tests__index_s7_methods.snap
---
source: crates/ark/src/lsp/indexer.rs
expression: entries
---
[
    IndexEntry {
        key: "Class",
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 1,
                character: 5,
            },
        },
        data: Variable {
            name: "Class",
        },
    },
    IndexEntry {
        key: "generic",
        range: Range {
            start: Position {
                line: 2,
                character: 0,
            },
            end: Position {
                line: 2,
                character: 7,
            },
        },
        data: Variable {
            name: "generic",
        },
    },
    IndexEntry {
        key: "method(generic, Class)",
        range: Range {
            start: Position {
                line: 7,
                character: 0,
            },
            end: Position {
                line: 7,
                character: 22,
            },
        },
        data: Function {
            name: "method(generic, Class)",
            arguments: [
                "arg",
            ],
        },
    },
]
