crates/ark/src/lsp/snapshots/ark__lsp__indexer__tests__index_variable.snap
---
source: crates/ark/src/lsp/indexer.rs
expression: entries
---
[
    IndexEntry {
        key: "x",
        range: IndexRange {
            start: IndexPoint {
                row: 1,
                column: 0,
            },
            end: IndexPoint {
                row: 1,
                column: 1,
            },
        },
        data: Variable {
            name: "x",
        },
    },
    IndexEntry {
        key: "y",
        range: IndexRange {
            start: IndexPoint {
                row: 2,
                column: 0,
            },
            end: IndexPoint {
                row: 2,
                column: 1,
            },
        },
        data: Variable {
            name: "y",
        },
    },
]
